kojin-macros/tests/fail/no_params.rs
use kojin_macros::task;

#[task]
async fn my_task() {}

fn main() {}
